web/src/components/pages/about/about.css
@import url('../../vars.css');

.record-quality-content {
    display: grid;
    grid-template-columns: 49% 48%;
    grid-template-rows: auto;
    grid-column-gap: 3%;

    img {
        justify-self: end;
    }
}

.about {
    & #content {
        padding: 0;
    }

    & #help-links {
        display: none;
    }

    & footer {
        margin-top: 0;
    }

    & .about-hero {
        position: relative;
        padding-left: 1rem;

        &.why-common-voice,
        &.partners {
            background-color: #f9f9f7;
        }

        .about-container {
            box-sizing: border-box;
            transition: opacity var(--transition-duration-slow) var(--easing);
            max-width: var(--desktop-width);
            margin-right: auto;
            margin-left: auto;
            min-height: 100%;
        }

        & .vertical-line {
            width: 3px;
            height: 100px;
            background: linear-gradient(to right, #f89096, #b1b4e5);
            margin: 0 auto;

            @media (--sm-down) {
                height: 50px;
                margin-top: 30px;
            }
        }

        .about-content {
            position: relative;
            z-index: var(--middle-z-index);
        }
    }
}

